set global font and fix alignment on footer

--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -24,3 +24,15 @@
 :root {
   --animate-duration: 2s;
 }
+
+.font_Arial {
+  font-family: Arial;
+}
+
+.font_Times_New_Roman {
+  font-family: 'Times New Roman', Times, serif;
+}
+
+.font_Brush_Script_MT {
+  font-family: 'Brush Script MT';
+}
